--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Faizey</a>.
+    Coded by <a href="https://github.com/faizraeim" target="_blank">Faizey</a>.
   </div>
 </body>
 </html>
