--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html role="language" lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body>
-<div class="container">
+<div role="container" class="container">
   <img class="qr-image" src="./images/image-qr-code.png" alt="QR Code Photo">
 
   <h1 class="title-text">Improve your front-end skills by building projects</h1>
@@ -26,7 +26,7 @@
 
 </div>
 </div>
-  <div class="attribution">
+  <div role="attribution" class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/faizraeim" target="_blank">Faizey</a>.
   </div>
